// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideNext renders the default copy on the final guide 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px solid #E7EEEC;
  margin-bottom: 24px;
  padding-top: 56px;
}

@media not all and (max-width: 1023px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-2 p {
  margin-top: 8px;
}

@media not all and (max-width: 1023px) {
  .emotion-2 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-4 {
  color: #5D6C74;
  font-size: 16px;
  margin-bottom: 16px;
}

.emotion-6 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-8 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-10 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-10 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-10 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-10 {
  background-repeat: repeat-x;
  -webkit-background-size: 2px 2px;
  background-size: 2px 2px;
  -webkit-background-position: center bottom;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-10 {
  background-image: linear-gradient(
        #E7EEEC 100%,
        #E7EEEC 0
      );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-10 {
  background-image: linear-gradient(
        to right,
        #9DD0E7 100%,
        #9DD0E7 0
      );
}

.emotion-11 {
  overflow: hidden;
  border-radius: 3px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-13 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: relative;
  bottom: 4px;
  left: -1px;
  height: 12px;
}

.emotion-14 {
  position: relative;
  border-radius: 7px;
  -webkit-transition: border 150ms ease-in-out,box-shadow 150ms ease-in-out;
  transition: border 150ms ease-in-out,box-shadow 150ms ease-in-out;
  border: 1px solid #E7EEEC;
  box-shadow: 0 4px 10px -4px rgba(6,22,33,0.3);
  background-color: white;
  color: #21313C;
  margin-top: 40px;
  padding: 40px 24px;
}

@media not all and (max-width: 767px) {
  .emotion-14 {
    padding: 48px;
  }
}

@media not all and (max-width: 1023px) {
  .emotion-14 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    margin-top: 0;
    max-width: 510px;
  }
}

.emotion-15 {
  margin-bottom: 24px;
}

@media not all and (max-width: 767px) {
  .emotion-15 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-18 {
  background-color: #E4F4E4;
  border-radius: 4px;
  color: #13AA52;
  font-size: 14px;
  font-weight: bold;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.emotion-20 {
  color: #061621;
  font-weight: bold;
}

.emotion-22 {
  list-style: none;
  padding-left: 0;
}

.emotion-24 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-24:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-24:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #13AA52;
}

.emotion-26 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-28 {
  color: #13AA52;
}

.emotion-29 {
  color: #061621;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-29:hover,
.emotion-29:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        What's Next
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Become a MongoDB Professional
      </div>
      <p>
        Congrats. You’ve completed all the guides. Want to take the next step? Register for the developer exam.
      </p>
      <a
        class="emotion-8 emotion-9"
        data-leafygreen-ui="anchor-container"
        href="https://university.mongodb.com/certification/developer/about"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="emotion-10"
        >
          <div
            class="emotion-11"
          />
          <div
            class="emotion-12"
          >
            Learn More
          </div>
        </span>
        <svg
          alt=""
          aria-hidden="true"
          class="emotion-13"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M13.823 2.4491C13.8201 2.30008 13.6999 2.17994 13.5509 2.17704L9.5062 2.09836C9.25654 2.09351 9.12821 2.39519 9.30482 2.5718L10.3856 3.65257L7.93433 6.10383C7.87964 6.15852 7.83047 6.21665 7.78683 6.27752L5.99909 8.06525C5.46457 8.59977 5.46457 9.4664 5.99909 10.0009C6.53361 10.5354 7.40023 10.5354 7.93475 10.0009L9.72249 8.21317C9.78336 8.16953 9.84148 8.12037 9.89618 8.06567L12.3474 5.61441L13.4282 6.69518C13.6048 6.87179 13.9065 6.74347 13.9016 6.4938L13.823 2.4491Z"
            fill="currentColor"
          />
          <path
            d="M7.25 3.12893C7.66421 3.12893 8 3.46472 8 3.87893C8 4.29315 7.66421 4.62893 7.25 4.62893H4C3.72386 4.62893 3.5 4.85279 3.5 5.12893V11.9929C3.5 12.2691 3.72386 12.4929 4 12.4929H10.864C11.1401 12.4929 11.364 12.2691 11.364 11.9929V8.75C11.364 8.33579 11.6998 8 12.114 8C12.5282 8 12.864 8.33579 12.864 8.75V11.9929C12.864 13.0975 11.9686 13.9929 10.864 13.9929H4C2.89543 13.9929 2 13.0975 2 11.9929V5.12893C2 4.02436 2.89543 3.12893 4 3.12893H7.25Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <div
      class="emotion-14"
    >
      <div
        class="emotion-15 emotion-16"
      >
        <div
          class="emotion-17 emotion-18 emotion-19"
        >
          Chapter 2
        </div>
        <div
          class="emotion-20 emotion-21"
        >
          CRUD
        </div>
      </div>
      <ul
        class="emotion-22 emotion-23"
      >
        <li
          class="emotion-24 emotion-25"
          color="#13AA52"
        >
          <div
            class="emotion-26 emotion-27"
            color="transparent"
          >
            <svg
              aria-label="Checkmark Icon"
              class="emotion-28"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.306 9.05l5.455-5.455a1 1 0 011.414 0l.707.707a1 1 0 010 1.414l-7.067 7.068a1 1 0 01-1.5-.098l-3.049-3.97a1 1 0 01.184-1.402l.595-.457a1.25 1.25 0 011.753.23L6.306 9.05z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <a
            class="emotion-29 emotion-30"
            href="/server/read/"
          >
            Read Data in MongoDB
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuideNext renders the first guide in the next chapter 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px solid #E7EEEC;
  margin-bottom: 24px;
  padding-top: 56px;
}

@media not all and (max-width: 1023px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-2 p {
  margin-top: 8px;
}

@media not all and (max-width: 1023px) {
  .emotion-2 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-4 {
  color: #5D6C74;
  font-size: 16px;
  margin-bottom: 16px;
}

.emotion-6 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  background-color: #09804C;
  box-shadow: 0px 2px 3px rgba(19, 170, 82, 0.4);
  color: #FFFFFF;
  font-size: 16px;
  -webkit-transform: translateY(1px);
  -moz-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
  height: 36px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:disabled {
  pointer-events: none;
}

.emotion-8:active,
.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:focus {
  color: #FFFFFF;
}

.emotion-8:hover,
.emotion-8:active {
  color: #FFFFFF;
  background-color: #116149;
  box-shadow: 0px 2px 3px rgba(19, 170, 82, 0.4),0px 0px 0px 3px #c3e7ca;
}

.emotion-8:focus {
  background-color: #116149;
  box-shadow: 0px 4px 4px rgba(0, 124, 173, 0.4),0px 0px 0px 3px #019EE2;
}

.emotion-9 {
  overflow: hidden;
  border-radius: 3px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-11 {
  position: relative;
  border-radius: 7px;
  -webkit-transition: border 150ms ease-in-out,box-shadow 150ms ease-in-out;
  transition: border 150ms ease-in-out,box-shadow 150ms ease-in-out;
  border: 1px solid #E7EEEC;
  box-shadow: 0 4px 10px -4px rgba(6,22,33,0.3);
  background-color: white;
  color: #21313C;
  margin-top: 40px;
  padding: 40px 24px;
}

@media not all and (max-width: 767px) {
  .emotion-11 {
    padding: 48px;
  }
}

@media not all and (max-width: 1023px) {
  .emotion-11 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    margin-top: 0;
    max-width: 510px;
  }
}

.emotion-12 {
  margin-bottom: 24px;
}

@media not all and (max-width: 767px) {
  .emotion-12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-15 {
  background-color: #E4F4E4;
  border-radius: 4px;
  color: #13AA52;
  font-size: 14px;
  font-weight: bold;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.emotion-17 {
  color: #061621;
  font-weight: bold;
}

.emotion-19 {
  list-style: none;
  padding-left: 0;
}

.emotion-21 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-21:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-21:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #E7EEEC;
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px #13AA52;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-25 {
  color: #13AA52;
}

.emotion-26 {
  color: #061621;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-26:hover,
.emotion-26:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        What's Next
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Read Data in MongoDB
      </div>
      <a
        aria-disabled="false"
        class="emotion-8"
        href="/server/read/"
      >
        <div
          class="emotion-9"
        />
        <div
          class="emotion-10"
        >
          Start Guide
        </div>
      </a>
    </div>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
      >
        <div
          class="emotion-14 emotion-15 emotion-16"
        >
          Chapter 2
        </div>
        <div
          class="emotion-17 emotion-18"
        >
          CRUD
        </div>
      </div>
      <ul
        class="emotion-19 emotion-20"
      >
        <li
          class="emotion-21 emotion-22"
          color="#E7EEEC"
        >
          <div
            class="emotion-23 emotion-24"
            color="#13AA52"
          >
            <svg
              class="emotion-25"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-26 emotion-27"
            href="/server/read/"
          >
            Read Data in MongoDB
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuideNext renders the next guide in the same chapter 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px solid #E7EEEC;
  margin-bottom: 24px;
  padding-top: 56px;
}

@media not all and (max-width: 1023px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-2 p {
  margin-top: 8px;
}

@media not all and (max-width: 1023px) {
  .emotion-2 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-4 {
  color: #5D6C74;
  font-size: 16px;
  margin-bottom: 16px;
}

.emotion-6 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  background-color: #09804C;
  box-shadow: 0px 2px 3px rgba(19, 170, 82, 0.4);
  color: #FFFFFF;
  font-size: 16px;
  -webkit-transform: translateY(1px);
  -moz-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
  height: 36px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:disabled {
  pointer-events: none;
}

.emotion-8:active,
.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:focus {
  color: #FFFFFF;
}

.emotion-8:hover,
.emotion-8:active {
  color: #FFFFFF;
  background-color: #116149;
  box-shadow: 0px 2px 3px rgba(19, 170, 82, 0.4),0px 0px 0px 3px #c3e7ca;
}

.emotion-8:focus {
  background-color: #116149;
  box-shadow: 0px 4px 4px rgba(0, 124, 173, 0.4),0px 0px 0px 3px #019EE2;
}

.emotion-9 {
  overflow: hidden;
  border-radius: 3px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-11 {
  position: relative;
  border-radius: 7px;
  -webkit-transition: border 150ms ease-in-out,box-shadow 150ms ease-in-out;
  transition: border 150ms ease-in-out,box-shadow 150ms ease-in-out;
  border: 1px solid #E7EEEC;
  box-shadow: 0 4px 10px -4px rgba(6,22,33,0.3);
  background-color: white;
  color: #21313C;
  margin-top: 40px;
  padding: 40px 24px;
}

@media not all and (max-width: 767px) {
  .emotion-11 {
    padding: 48px;
  }
}

@media not all and (max-width: 1023px) {
  .emotion-11 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    margin-top: 0;
    max-width: 510px;
  }
}

.emotion-12 {
  margin-bottom: 24px;
}

@media not all and (max-width: 767px) {
  .emotion-12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-15 {
  background-color: #E4F4E4;
  border-radius: 4px;
  color: #13AA52;
  font-size: 14px;
  font-weight: bold;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.emotion-17 {
  color: #061621;
  font-weight: bold;
}

.emotion-19 {
  list-style: none;
  padding-left: 0;
}

.emotion-21 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-21:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-21:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #13AA52;
}

.emotion-23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-25 {
  color: #13AA52;
}

.emotion-26 {
  color: #061621;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-26:hover,
.emotion-26:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-28 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-28:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-28:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #E7EEEC;
}

.emotion-30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px #13AA52;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-32 {
  color: #13AA52;
}

.emotion-39 {
  color: #3D4F58;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        What's Next
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        Set Up Atlas Connectivity
      </div>
      <a
        aria-disabled="false"
        class="emotion-8"
        href="/cloud/connectionstring/"
      >
        <div
          class="emotion-9"
        />
        <div
          class="emotion-10"
        >
          Start Guide
        </div>
      </a>
    </div>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
      >
        <div
          class="emotion-14 emotion-15 emotion-16"
        >
          Chapter 1
        </div>
        <div
          class="emotion-17 emotion-18"
        >
          Atlas
        </div>
      </div>
      <ul
        class="emotion-19 emotion-20"
      >
        <li
          class="emotion-21 emotion-22"
          color="#13AA52"
        >
          <div
            class="emotion-23 emotion-24"
            color="transparent"
          >
            <svg
              aria-label="Checkmark Icon"
              class="emotion-25"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.306 9.05l5.455-5.455a1 1 0 011.414 0l.707.707a1 1 0 010 1.414l-7.067 7.068a1 1 0 01-1.5-.098l-3.049-3.97a1 1 0 01.184-1.402l.595-.457a1.25 1.25 0 011.753.23L6.306 9.05z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <a
            class="emotion-26 emotion-27"
            href="/cloud/account/"
          >
            Create and Manage a MongoDB Account
          </a>
        </li>
        <li
          class="emotion-28 emotion-22"
          color="#E7EEEC"
        >
          <div
            class="emotion-30 emotion-24"
            color="#13AA52"
          >
            <svg
              class="emotion-32"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-26 emotion-27"
            href="/cloud/connectionstring/"
          >
            Set Up Atlas Connectivity
          </a>
        </li>
        <li
          class="emotion-28 emotion-22"
          color="#E7EEEC"
        >
          <div
            class="emotion-23 emotion-24"
            color="transparent"
          >
            <svg
              class="emotion-39"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-26 emotion-27"
            href="/cloud/migrate-from-aws-to-atlas/"
          >
            Migrate a MongoDB Replicate Set from AWS to MongoDB Atlas
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
